[project]
name = "secure-data-encryption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "cryptography>=44.0.2",
    "psycopg2>=2.9.10",
    "psycopg2-binary==2.9.10",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
]
